<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ui.sell.SellEditFragment"
    >
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <Toolbar
        android:id="@+id/tbEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <TextView
            android:id="@+id/tvEditTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editTitle"
            android:textSize="@dimen/home_title"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tvEditLabelTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/createLabelTitle"
            />
        <EditText
            android:id="@+id/etEditTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />
        <TextView
            android:id="@+id/tvEditLabelDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/createLabelDescription"/>
        <EditText
            android:id="@+id/etEditDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />
        <TextView
            android:id="@+id/tvEditLabelArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/createLabelArea"/>
        <EditText
            android:id="@+id/etEditArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />
        <TextView
            android:id="@+id/tvCreateLabelImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/createLabelImages"/>
        <HorizontalScrollView
            android:id="@+id/llEditImageContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            ></HorizontalScrollView>

        <Button
            android:id="@+id/bntEditAddImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ADD IMAGE"
            />
        <TextView
            android:id="@+id/tvEditLabelLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/createLabelLocation"/>
        <RadioGroup
            android:id="@+id/rgEditLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <RadioButton
                android:id="@+id/rbEditSelectLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Select Location"/>
            <RadioButton
                android:id="@+id/rbEditCurrentLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Use Actual Location"/>
        </RadioGroup>






    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center|bottom"
        >

    <Button
        android:id="@+id/btnDeletePublish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deleteProperty"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnEditPublish"
        android:backgroundTint="@color/delRed"
        />
        <Button
        android:id="@+id/btnEditPublish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editProperty"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/btnDeletePublish"
        app:layout_constraintEnd_toEndOf="parent"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>